2008-03-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/util/pkgIndex.tcl: Added two new sak support
	* support/devel/sak/util/color.tcl: packages to handle colorization
	* support/devel/sak/util/feedback.tcl: and common feedback ops (on
	  top of the animation).

	* support/devel/sak/util/anim.tcl: Exported the public commands.

2008-03-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/sak/test/run.tcl (::sak::test::run::Summary):
	  Fixed [Bug 1909367]. Error information is now passed from the
	  file summary code to the counters for the whole test run.

2008-01-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/stringprep:               New module 'stringprep'.
	* support/installation/modules.tcl:

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-09-07  Andreas Kupries  <andreask@activestate.com>

	* support/releases/history/README-1.10.txt: Updated for modified
	  math package.

2007-08-30  Andreas Kupries  <andreask@activestate.com>

	* devdoc/critcl-tcllib.txt: Fixed [SF Tcllib Bug 1784843], applied
	* devdoc/dirlayout_install.txt: Larry Virden's patches fixing typos,
	* devdoc/indexing.txt: and doing other editorial changes.
	* devdoc/installation.txt:
	* devdoc/devguide.html:

	* README.developer: Fixed [SF Tcllib Bug 1784836], applied Larry
	* README: Virden's patches fixing typos, and doing other editorial
	  changes.

2007-08-29  Andreas Kupries  <andreask@activestate.com>

	* modules/tcllibc.tcl: Version of package bumped to 0.3.2 for the
	  bugfix in the C implementation of struct::set (v 2.2.1).

2007-08-28  Andreas Kupries  <andreask@activestate.com>

	* support/releases/history/README-1.10.txt: Whitespace and
	  formatting cleanup after various updates for modified packages.

2007-08-24  Kevin B. Kenny  <kennykb@acm.org>
