@@ -3,7 +3,7 @@
 
 # Available variables
 # * argv  - Cmdline arguments
-# * base  - Location of sak.tcl = Topd directory of Tcllib distribution
+# * base  - Location of sak.tcl = Top directory of Tcllib distribution
 # * cbase - Location of all files relevant to this command.
 # * sbase - Location of all files supporting the SAK.
 
