@@ -1,5 +1,10 @@
 2008-03-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
+	* support/devel/sak/test/run.tcl: Replaced custom color code with
+	  use of the new package sak::color.
+	* support/devel/sak/test/cmd.tcl: Fixed a typo.
+	* support/devel/sak/test/topic.txt: Deeper indentation.
+
 	* support/devel/sak/util/pkgIndex.tcl: Added two new sak support
 	* support/devel/sak/util/color.tcl: packages to handle colorization
 	* support/devel/sak/util/feedback.tcl: and common feedback ops (on
